Add null pointer check because of reported crash here.

BUG: 304609
FIXED-IN: 3.0